Ajout de la route /play/join/{gameID} qui permet de rejoindre une partie existante à partir de l'ID de celle-ci
