# server.js
@@ -1,5 +1,6 @@
 import {
-	createGameInstance
+	createGameInstance,
+	findGameInstance
 } from "./gestionParties.js";
 
 const SERVER_PORT = 8080
@@ -18,7 +19,38 @@ Bun.serve({
 					status:200
 				})
 			} catch (error) {
-				return internalServerError
+				console.log(error);
+				return internalServerError;
+			}
+		},
+		"/play/join/:game_id": async (req) => {
+			try {
+				const game_id = req.params.game_id;
+				const status = await findGameInstance(game_id);
+				console.log(status)
+				switch (status) {
+					case 0: {
+						return new Response(game_id, {
+							body: game_id,
+							status:200
+						})
+					}
+					case -1: {
+						return new Response("Error, game not found !", {
+							body: game_id,
+							status:404
+						})
+					}
+					case -2: {
+						return new Response("The game you are looking for is full !", {
+							body: game_id,
+							status:409
+						})
+					}
+				}
+			} catch(error) {
+				console.log(error)
+				return internalServerError;
 			}
 		}
 	}
